# openwrt-test

package/base-files/files/etc/init.d/: TEST
package/my-Luci/: README.md
package/utils/Client/: CMakeLists.txt  Makefile
package/utils/Client/include/: ubus_server.h
package/utils/Client/src/: main.c  ubus_server.c
package/utils/Server/: CMakeLists.txt  Makefile
package/utils/Server/include/: event.h  queue.h  ubus_client.h
package/utils/Server/src/: TCP_Client.c  queue.c  ubus_client.c
package/utils/TCP/: CMakeLists.txt  Makefile
package/utils/TCP/src/: main.c
package/utils/TEST/: CMakeLists.txt  Makefile
package/utils/TEST/include/: ubus_client.h
package/utils/TEST/src/: main.c  ubus_client.c
